administrator/templates/atum/scss/blocks/_form.scss
// Form

.form-control {
  max-width: $input-max-width;
  background-color: $white;
  border: $input-border;
  border-radius: $border-radius;
  box-shadow: $input-box-shadow;

  &:focus {
    border-color: $focuscolor;
    box-shadow: $focusshadow;
  }
}

.form-control:disabled,
.form-control[readonly] {
  border: 0;
  box-shadow: none;
}


.control-group {
  display: flex;
  flex-wrap: wrap;
  margin: 0 0 1rem;

  > .form-check {
    display: inline-block;
  }

  &::after {
    display: table;
    clear: both;
    content: "";
  }

  .control-label {
    width: 240px;
    padding: .3rem 1rem .3rem 0;
  }

  .controls {
    position: relative;
    flex: 1;
    min-width: 210px;

    + div {
      width: 100%;
      margin: 5px 0 10px;
    }
  }

  .form-vertical & {
    flex-direction: column;
  }

}

.control-group {
  .switcher__legend {
    font-size: $label-font-size;
  }
}

.spacer {
  hr {
    width: 380px;
  }

  label {
    width: 440px;
  }
}

td .form-control {
  display: inline-block;
  width: auto;
}

legend {
  margin-bottom: 1.1rem;
}

.checkboxes {
  padding-top: 5px;

  .checkbox input {
    position: static;
    margin-left: 0;
  }
}

.form-check {
  padding-top: 5px;
  margin-bottom: 0;
}

.modal label {
  width: 100%;
}

// Validation
.invalid {
  color: theme-color("danger");
  border-color: theme-color("danger");
}

.valid {
  border-color: theme-color("success");
}

.form-control-feedback {
  display: block;
}

[aria-grabbed="true"] {
  box-shadow: $input-box-shadow;
}

.sortable-handler.inactive {
  opacity: .3;
}

// set up hidden tooltip
[role="tooltip"]:not(.show) {
  z-index: $zindex-tooltip;
  display: none;
  max-width: 100%;
  padding: .5em;
  margin: .25em;
  color: $white;
  text-align: start;
  background: $black;
  border-radius: .2rem;
}

// reveal associated tooltip on focus
:focus + [role="tooltip"],
:hover + [role="tooltip"] {
  position: absolute;
  display: block;
}

[id="filter[search]-desc"] {
  bottom: 100%;
}

.container-popup [id="filter[search]-desc"] {
  top: 100%;
  bottom: auto;
}

.switcher__legend {
  margin-bottom: 0;
  font-size: $label-font-size;
  color: var(--atum-special-color);
}

.input-group-append {
  overflow: hidden;

  [dir=ltr] & {
    border-top-right-radius: $border-radius;
    border-bottom-right-radius: $border-radius;
  }

  [dir=rtl] & {
    border-top-left-radius: $border-radius;
    border-bottom-left-radius: $border-radius;
  }
}

